# nexus-sticky

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md
scripts/: build-wsl.ps1  launch.bat  launch.ps1  setup-wsl.sh  sync-wsl.ps1
src/: history.html  sticky.css  sticky.html  sticky.js
src-tauri/: Cargo.toml  gen-icons.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  event.rs  main.rs  nexus.rs  tray.rs  validator.rs  workspace.rs
